Switched libs for jaxb3