@@ -9,7 +9,7 @@
 
     <properties>
         <java.version>11</java.version>
-        <main.class>de.fhac.rn.XMLSerialisation.XMLSerialisation</main.class>
+        <main.class>de.fhac.rn.xml.XMLSerialisation</main.class>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -19,68 +19,44 @@
     </properties>
 
     <dependencies>
+        <!-- JAXB API only -->
         <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.4.0-b180830.0359</version>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>4.0.0</version>
         </dependency>
+
+        <!-- JAXB RI, Jakarta XML Binding -->
         <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-runtime</artifactId>
-            <version>2.4.0-b180830.0438</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.activation</groupId>
-            <artifactId>jakarta.activation</artifactId>
-            <version>1.2.2</version>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>3.0.2</version>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
-            <!-- mvn clean compile exec:java -->
+            <!-- mvn jaxb2:xjc -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.6.0</version>
-                <configuration>
-                    <mainClass>${main.class}</mainClass>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-                <configuration>
-                    <argLine>--illegal-access=permit</argLine>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.cxf</groupId>
-                <artifactId>cxf-xjc-plugin</artifactId>
-                <version>3.3.1</version>
+                <artifactId>jaxb2-maven-plugin</artifactId>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>xjc</id>
-                        <phase>generate-sources</phase>
                         <goals>
-                            <goal>xsdtojava</goal>
+                            <goal>xjc</goal>
                         </goals>
-
                     </execution>
                 </executions>
                 <configuration>
-                    <sourceRoot>${generated.classes.dir}</sourceRoot>
-                    <xsdOptions>
-                        <xsdOption>
-                            <xsd>${basedir}/${xsd.sources.dir}/echoMessage.xsd</xsd>
-                            <packagename>${generated.classes.package}</packagename>
-                        </xsdOption>
-                    </xsdOptions>
+                    <!-- Define the directory where we should find the XSD files -->
+                    <sources>
+                        <source>src/main/resources</source>
+                    </sources>
+                    <!-- The package of your generated sources -->
+                    <packageName>${generated.classes.package}</packageName>
                 </configuration>
             </plugin>
         </plugins>
